Case insensitive entity/axiom search. Main search bar used for axiom search. Removed lots of Set<Ontology> in preference for Imports.INCLUDED